--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='/squeeze-api.v1.json'></redoc>
+    <redoc spec-url='/squeeze-openapi.v1.json'></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"></script>
   </body>
 </html>
